# log-classifier

./: .gitignore  OPTIMIZATION.md  README.md  README_TEACHER.md  core_metrics_summary.json  main.py  pyproject.toml
baseline_results/: README.md  albert-base-v2_results.json  bert-base-uncased_results.json  hfl_chinese-macbert-base_results.json
baseline_results/ml/: summary_ml.json  tfidf_nb_results.json
baseline_results/phase3_enhanced/: summary_enhanced.json
baseline_results/phase_d_stacking/: best.json  stack_xgb_results.json
baselines/: README.md  _common.sh  phase0_ml.sh  phase2_embedding.sh  phase3_enhanced.sh  phase_c_kfold.sh  phase_d_stacking.sh  regen_summary.py  requirements.txt  run_all_baselines.sh  run_all_baselines_train.sh  run_all_ml_baselines.sh  run_all_new_baselines.sh  run_baseline.py  run_baseline_train.py  run_embedding_baselines.py  run_enhanced_train.sh  run_ensemble.py  run_fold_worker.py  run_kfold_parallel.py  run_kfold_train.py  run_ml_baselines.py  run_noise_robustness_test.py  run_roberta_base_parallel.sh  run_roberta_large.sh  run_roberta_large_parallel.sh  run_setfit_baseline.py  run_sota.sh  watch_phase_d.sh  watch_run_phase_d.sh
baselines/baseline_results/: google_electra-base-discriminator_results.json  microsoft_codebert-base_results.json  nghuyong_ernie-2.0-base-en_results.json  roberta-base_results.json  summary_leaderboard.json  xlnet-base-cased_results.json
baselines/dl/: eval.py  run_all_eval.sh  run_all_train.sh  summary_eval_robustness.json  summary_train.json  train.py
baselines/ml/: eval.py  run_all_eval.sh  run_all_train.sh  train.py
baselines/python/: _fold_worker.py  embedding_baselines.py  ensemble.py  ml_baselines.py  regen_summary.py  setfit_baseline.py  train_kfold.py  train_single.py
configs/teacher/: ce_unixcoder_seed42.yaml  distill_unixcoder_10layer_robust_seed42.yaml  distill_unixcoder_6layer_robust_seed42.yaml  (+10 more)
data/: label_language_eval.j2  数据说明.md
src/: train_bert.py  train_bert_lightning.py  train_distilbert.py
(+74 files in other folders)
