[project]
name = "log-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pytorch-lightning>=2.0.0",
    "scikit-learn>=1.0.0",
    "tiktoken>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_classifier"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
